--- a/localisation/english/pearl_advisor_l_english.yml
+++ b/localisation/english/pearl_advisor_l_english.yml
@@ -3,4 +3,5 @@
  advisor_voice_pearlfiltered: "Pearl Advisor Filtered"
  Pearl: "Pearl"
  Pearlfiltered: "Pearl with filter"
+ pearlfiltered: "Pearl with filter"
  
