--- a/localisation/english/pearl_l_english.yml
+++ b/localisation/english/pearl_l_english.yml
@@ -3,3 +3,4 @@
  advisor_voice_pearlfiltered: "Pearl Advisor Filtered"
  Pearl: "Pearl"
  Pearlfiltered: "Pearl with filter"
+ pearlfiltered: "Pearl with filter"
