--- a/localisation/gems_l_english.yml
+++ b/localisation/gems_l_english.yml
@@ -127,7 +127,8 @@
  trait_blue_court_desc: "This is $blue_diamond$'s Court, she brings her entourage where ever she goes, anything else is unthinkable. This large following of Gems however has some distict advantages."
  trait_pink_court: "$pink_diamond$'s Court"
  trait_pink_court_desc: "This is $pink_diamond$'s Court, she brings her entourage where ever she goes, anything else is unthinkable. This large following of Gems however has some distict advantages."
- 
+ trait_pink_court2: "$trait_pink_court$"
+ trait_pink_court2_desc: "$trait_pink_court_desc$"
  trait_poofed_gem: "Poofed Gem"
  trait_poofed_gem_desc: "This gem has lost her physical form and needs some times to reform."
 
@@ -322,12 +323,13 @@
  building_gem_spire3: "Monumental Spire"
  building_gem_spire3_desc: "This mighty construct reaches into the sky connecting our gems with the rest of gemkind."
  building_buff_kindergarten1: "Experiemental Kindergarten"
- building_buff_kindergarten1_desc: "We are testing different Methods to grow Gems on this world. We can expand this site."
+ building_buff_kindergarten1_desc: "We are testing different Methods to grow Gems on this world. We can expand this site.$building_buff_warning$"
  building_buff_kindergarten2: "Kindergarden Coordination Center"
- building_buff_kindergarten2_desc: "In addition to improving our Gem creation we are also coordinating each Kindergarden for improved performance."
+ building_buff_kindergarten2_desc: "In addition to improving our Gem creation we are also coordinating each Kindergarden for improved performance.$building_buff_warning$"
  building_buff_kindergarten3: "Kindergarden Managment Complex"
- building_buff_kindergarten3_desc: "All Kindergardens on this planet are being coordianted and managed for maximum efficiency."
- building_crystal_gem_temple: "Crystal Gem Temple"
+ building_buff_kindergarten3_desc: "All Kindergardens on this planet are being coordianted and managed for maximum efficiency.$building_buff_warning$"
+ building_buff_warning: "\n\n§RRemoves Robotist Jobs to avoid conflict, Organic and Mechanical Pop assembly are incompatible§!" 
+building_crystal_gem_temple: "Crystal Gem Temple"
  building_crystal_gem_temple_desc: "The Temple is the statue of a gigantic 8 armed woman carved into the side of a cliff in an idyllic little beach town. The §l$crystal_gems$§! live here in their enigmatic ways."
  building_gem_sky_arena: "Sky Arena"
  building_gem_sky_arena_desc: "This Arena floats between the clouds, a marvel of gem-engineering. Combatants of all stripes can test their metal here."
@@ -484,6 +486,8 @@
  
  galaxy_warp: "Construct $pm_gem_galaxy_warp$"
  galaxy_warp_desc: "$pm_gem_galaxy_warp_desc$"
+ gems_pop_demotion_time_reduction: "Retreat from Earth"
+ gems_pop_demotion_time_reduction_desc: "Many Gems Fled Earth, and now have to find new work in the Empire."
  gem_diamond_choice.a.dead: "$white_diamond$ is no longer with us."
  gem_diamond_choice.b.dead: "$yellow_diamond$ is no longer with us."
  gem_diamond_choice.c.dead: "$blue_diamond$ is no longer with us."
