implemented Lapis Lazuli Story Line

--- a/localisation/gems_l_english.yml
+++ b/localisation/gems_l_english.yml
@@ -578,6 +578,17 @@ building_crystal_gem_temple: "Crystal Gem Temple"
  gem_off_colors.1056.name: "The flames of war rage once more"
  gem_off_colors.1056.desc: "For a brief moment we thought to have defeated the Crystal Gems but they are back and even some of our defenders have joined them."
  gem_off_colors.1056.a: "§PShe§! attacked what!?"
+ #lapis story 
+ Lapis_Lazuli: "§BLapis Lazuli§!"
+ gem_off_colors.1060.name: "Wartime Reporting"
+ gem_off_colors.1060.desc: "Unconfirmed reports from §Y[This.GetName]§! are worrisome. We are sending a $Lapis_Lazuli$ to investigate and document any instances she can find."
+ gem_off_colors.1061.name: "Warcrimes on §Y[This.GetName]§!"
+ gem_off_colors.1061.desc: "The §RCrystal Gems§! are out of control, they are attacking soldiers and civilians alike. Is nobody save from their wrath?"
+ gem_off_colors.1062.name: "We have captured a Spy"
+ gem_off_colors.1062.desc: "She used a very cunning strategy. By disguising herself as a civilian casualty she hoped of being transfered from §Y[This.GetName]§! to §Y[Owner.Capital.GetName]§! but we have captured her.\n\nShe is being interogated as we speak."
+ gem_off_colors.1063.name: "Pointles Questions"
+ gem_off_colors.1063.desc: "We have interogated the $Lapis_Lazuli$ Gem quite a bit. But we have gotten no useful intel. A dead end."
+
  gem_off_colors.2002.name: "Full Evacuation of §Y[This.GetName]§!"
  gem_off_colors.2002.desc: "a full retreat of all Diamond aligned Gems has been ordered.\n\nall Pops from £pops£ §Y[This.GetName]§! will be distriputed across the empire."
  gem_off_colors.2002.a: "none will be left behind"
