Edited Earth Evacuation and Spelling errors

--- a/localisation/gems_l_english.yml
+++ b/localisation/gems_l_english.yml
@@ -598,8 +598,8 @@ building_crystal_gem_temple: "Crystal Gem Temple"
 
  gem_off_colors.2002.name: "Full Evacuation of §Y[This.GetName]§!"
  gem_off_colors.2002.desc: "a full retreat of all Diamond aligned Gems has been ordered.\n\nall Pops from £pops£ §Y[This.GetName]§! will be distriputed across the empire."
- gem_off_colors.2002.a: "none will be left behind"
- gem_off_colors.2002.b: "those who fall will be left behind"
+ gem_off_colors.2002.a: "Nobody will be left behind"
+ gem_off_colors.2002.b: "Those who fall will be left behind"
  gem_off_colors.2003.name: "The Final Attack"
  gem_off_colors.2003.desc: "The Shattering of $pink_d$ will not be go unanswered, all deserve the ultimate punishment.\n\nAll Gem life on §Y[This.GetName]§! will be annihilated"
  gem_off_colors.2003.a: "Evacuate all [Owner.GetSpeciesNamePlural]!"
