--- a/localisation/gems_l_english.yml
+++ b/localisation/gems_l_english.yml
@@ -42,6 +42,8 @@
  GEO: "Geoloid"
  GEO1: "Geoloid"
  GEO2: "Geoloid"
+ gem1: "Geoloid"
+ gem2: "Geoloid"
  GEO_desc: "Species Class has no effect on your Empire, but Geoloid-class Species may consider other Geoloids to be less alien than other Species Classes."
  GEO_plural: "Geoloids"
  GEO_insult_01: "rock"
@@ -84,6 +86,12 @@
  EMPIRE_DESIGN_gem_rogue_desc: "§LOur Homeworld wanders the void!§!\n$EMPIRE_DESIGN_gem_desc$\n\n§HThis has no real impact on the game.§!"
  EMPIRE_DESIGN_gem_white: "$white_diamond$ has taken control"
  EMPIRE_DESIGN_gem_white_desc: "All are one, all are $white_diamond$. The 'Gems': Mysterious in their origins and possessing unusual abilities are now one mind, it remains uncertain whether the Gem race is a natural product of evolution, a manufactured mechanical construct, a random convergence of quantum energy, or the result of some other unforeseen catalyst. All that is known is their parasitic behavior, invading and conquering worlds to drain the organic energy from its very soil, and use it to grow more of their kind.\n\nThe beauty of their forms and the structures they build hide a bleak and terrible nature, a society built upon the indentured servitude of all Gems to their Diamonds, where all know their place and dare not deviate from it."
+ EMPIRE_DESIGN_gem_no_lithoid: "$EMPIRE_DESIGN_gem$"
+ EMPIRE_DESIGN_gem__no_lithoid_desc: "$EMPIRE_DESIGN_gem_desc$"
+ EMPIRE_DESIGN_gem_rogue_no_lithoid: "$EMPIRE_DESIGN_gem$"
+ EMPIRE_DESIGN_gem_rogue_no_lithoid_desc: "$EMPIRE_DESIGN_gem_rogue_desc$"
+ EMPIRE_DESIGN_gem_white_no_lithoid: "$EMPIRE_DESIGN_gem_white$"
+ EMPIRE_DESIGN_gem_white_no_lithoid_desc: "$EMPIRE_DESIGN_gem_white_desc$"
  
  START_SCREEN_GEM: "The work has been completed. Our Homeworld has been transformed and repurposed for all it is capable of, all available resources being put to use for our purposes. The filthy organic life that once existed on it with us is no more, its essence harnessed for us to make use of in growing more of our kind.\n\nDespite our grand accomplishment, more resources are needed to sustain us and keep our numbers strong. The strength of our society and the vision of the Diamonds will guide us to a prosperous future, so long as all do as they are meant for since their emergence. It is this that allowed us to escape our Homeworld, and harness the off-world resources in our own system.\n\nThe time has come now to look to the stars, and find other worlds that we may inhabit and create future generations of Gems. Any organics or other alien foes will fall before our new empire, and we shall easily crush the lower forms of life who dare to oppose our shining greatness!"
  START_SCREEN_PART_ONE_GEM: "In the eons since the first primitive [GetSpeciesName] communities took shape in the sterile and resource-rich landscapes of [GetHomeWorldName], our civilization has spread and prospered."
