--- a/localisation/gems_l_english.yml
+++ b/localisation/gems_l_english.yml
@@ -338,10 +338,10 @@
  building_gem_spire3_desc: "This mighty construct reaches into the sky connecting our gems with the rest of gemkind."
  building_buff_kindergarten1: "Experiemental Kindergarten"
  building_buff_kindergarten1_desc: "We are testing different Methods to grow Gems on this world. We can expand this site.$building_buff_warning$"
- building_buff_kindergarten2: "Kindergarden Coordination Center"
- building_buff_kindergarten2_desc: "In addition to improving our Gem creation we are also coordinating each Kindergarden for improved performance.$building_buff_warning$"
- building_buff_kindergarten3: "Kindergarden Managment Complex"
- building_buff_kindergarten3_desc: "All Kindergardens on this planet are being coordianted and managed for maximum efficiency.$building_buff_warning$"
+ building_buff_kindergarten2: "Kindergarten Coordination Center"
+ building_buff_kindergarten2_desc: "In addition to improving our Gem creation we are also coordinating each Kindergarten for improved performance.$building_buff_warning$"
+ building_buff_kindergarten3: "Kindergarten Managment Complex"
+ building_buff_kindergarten3_desc: "All Kindergartens on this planet are being coordianted and managed for maximum efficiency.$building_buff_warning$"
  building_buff_warning: "\n\n§RRemoves Robotist Jobs to avoid conflict, Organic and Mechanical Pop assembly are incompatible§!" 
 building_crystal_gem_temple: "Crystal Gem Temple"
  building_crystal_gem_temple_desc: "The Temple is the statue of a gigantic 8 armed woman carved into the side of a cliff in an idyllic little beach town. The §l$crystal_gems$§! live here in their enigmatic ways."
@@ -497,6 +497,8 @@ building_crystal_gem_temple: "Crystal Gem Temple"
  pm_pink_celebration: "Big Party for $pink_d$"
  pm_pink_celebration_desc: "$pink_diamond$ has been so happy lately, she is playing and partying with her gems and isn't even thinking about her colony, for now."
  pm_gem_cookie_cats: "Cookie Cats"
+ f93_pm_certified_kindergartener: "Certified Kindergartener"
+ f93_pm_certified_kindergartener_desc: "A Certified Kindergartener is operating on this planet and ensures a steady stream of Pops are created. Once no more new Gems can be created She will push for a planetary transformation into a Gem World."
  
  galaxy_warp: "Construct $pm_gem_galaxy_warp$"
  galaxy_warp_desc: "$pm_gem_galaxy_warp_desc$"
@@ -815,7 +817,15 @@ building_crystal_gem_temple: "Crystal Gem Temple"
 
 #deposit Eater Events
  f93_deposit_eater.1.name: "New Gameplay Mode"
- f93_deposit_eater.1.desc: "Hello §GPlayer§!, sorry to §Rinterrupt!§!$NEW_LINE$But you need to decide if you want to use the new Pop gen creation or stick with the old ways.$NEW_LINE$£time£Quick Overview$TABBED_NEW_LINE$A: You will consume deposits to make £pops£Pops, Making the growth potential massive but limiting it to exploitable £planetsize£planets$TABBED_NEW_LINE$B: You construct a custom £district£District called the Kindergarten, to do this you first transform £food£farming deposits into Kindergarten deposits. Behaves more like Machine Empire £pops£Pop Growth.$NEW_LINE$$NEW_LINE$§GShould another mod overwrite this mods Game Rule changes, than option A is a compatibility mode aswell, it wont be affected by other mods.§!"
- f93_deposit_eater.1.a: "§RA§! LET'S GO!"
+ f93_deposit_eater.1.desc: "Hello §GPlayer§!, sorry to §Rinterrupt!§!$NEW_LINE$But you need to decide if you want to use the new Pop gen creation or stick with the old ways.$NEW_LINE$£time£Quick Overview$TABBED_NEW_LINE$A: You will consume deposits to make £pops£Pops, Making the growth potential massive but limiting it to exploitable £planetsize£planets.$TABBED_NEW_LINE$§Ycheck the decision tab§!$TABBED_NEW_LINE$B: You construct a custom £district£District called the Kindergarten, to do this you first transform £food£farming deposits into Kindergarten deposits. Behaves more like Machine Empire £pops£Pop Growth.$NEW_LINE$$NEW_LINE$§GShould another mod overwrite this mods Game Rule changes, than option A is a compatibility mode aswell, it wont be affected by other mods.§!"
+ f93_deposit_eater.1.a: "§RA§! LET'S GO! §RWIP but playable§!"
  f93_deposit_eater.1.b: "§RB§! No, Thanks!"
  decision_pop_project_deposit_eater: "Expand the Kindergarten"
+ decision_pop_project_deposit_eater_desc: "One random non rare non gem deposite is consumed by our gem creation process."
+ decision_pop_project_deposit_eater_auto: "Employ Certified Kindergartener"
+ decision_pop_project_deposit_eater_auto_desc: "Periodicly checks if an expansion of the Kindergarten or a transformation into a Gemworld are possible."
+ decision_pop_project_deposit_eater_auto_stop: "Halt the Certified Kindergartener"
+ decision_pop_project_deposit_eater_auto_stop_desc: "Due to Labor rights regulations we cant fire her, but at least all her requests will drown in our bureaucracy!"
+ decision_pop_project_deposit_eater_auto_tooltip: "Regularly checks if new pops or a Gemworld can be created.$NEW_LINE$This will use §Y500§! £minerals£minerals when creating a new g£pops£Gem."
+ gems_pop_eat_deposits: "Managed Xenos"
+ gems_pop_eat_deposits_desc: "Xenos are strictly controlled to ensure their weird genetics are not mixed in undesired ways. we also ensure that the population wont grow or shrink."
