--- a/localisation/gems_l_french.yml
+++ b/localisation/gems_l_french.yml
@@ -325,10 +325,10 @@
  building_gem_spire3_desc: "This mighty construct reaches into the sky connecting our gems with the rest of gemkind."
  building_buff_kindergarten1: "Experiemental Kindergarten"
  building_buff_kindergarten1_desc: "We are testing different Methods to grow Gems on this world. We can expand this site.$building_buff_warning$"
- building_buff_kindergarten2: "Kindergarden Coordination Center"
- building_buff_kindergarten2_desc: "In addition to improving our Gem creation we are also coordinating each Kindergarden for improved performance.$building_buff_warning$"
- building_buff_kindergarten3: "Kindergarden Managment Complex"
- building_buff_kindergarten3_desc: "All Kindergardens on this planet are being coordianted and managed for maximum efficiency.$building_buff_warning$"
+ building_buff_kindergarten2: "Kindergarten Coordination Center"
+ building_buff_kindergarten2_desc: "In addition to improving our Gem creation we are also coordinating each Kindergarten for improved performance.$building_buff_warning$"
+ building_buff_kindergarten3: "Kindergarten Managment Complex"
+ building_buff_kindergarten3_desc: "All Kindergartens on this planet are being coordianted and managed for maximum efficiency.$building_buff_warning$"
  building_buff_warning: "\n\n§RRemoves Robotist Jobs to avoid conflict, Organic and Mechanical Pop assembly are incompatible§!" 
 building_crystal_gem_temple: "Crystal Gem Temple"
  building_crystal_gem_temple_desc: "The Temple is the statue of a gigantic 8 armed woman carved into the side of a cliff in an idyllic little beach town. The §l$crystal_gems$§! live here in their enigmatic ways."
